--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,15 +1,11 @@
 {
   "@@last_modified": "2021-12-07T12:33:16.270871",
   "welcomeText": "Welcome to AEWeb",
-  "@welcomeText": {
-    "type": "text",
-    "placeholders_order": [],
-    "placeholders": {}
-  },
   "systemDefault": "System Default",
-  "@systemDefault": {
-    "type": "text",
-    "placeholders_order": [],
-    "placeholders": {}
-  }
+  "addWebsiteNameMissing": "Please fill in the name of the website.",
+  "addWebsitePathMissing": "Please fill the path containing the files to be uploaded.",
+  "addWebsitePathLabel": "Select the root folder of your website",
+  "addWebsitePublicCertPathLabel": "Add PEM file of the public certificate for the domain",
+  "addWebsitePrivateKeyCertLabel": "Add PEM file of the private key related to the certificate for the domain",
+  "addWebsiteGitignoreLabel": "Apply .gitignore rules"
 }
