externalize labels + reorg files

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -11,6 +11,117 @@
   "addWebsiteGitignoreLabel": "Apply .gitignore rules?",
   "addWebsiteZipLabel": "Zip file containing the website files",
   "choosePathSyncPathMissing": "Please fill the path containing the files to be synchronized with the files stored on the blockchain.",
-  "version": "Version :",
-  "build": "Build :"
+  "version": "Version:",
+  "build": "Build:",
+  "btn_cancel": "Cancel",
+  "btn_close": "Close",
+  "btn_update_website": "Update website",
+  "btn_add_website": "Create website",
+  "hint_searchFiles": "Search files...",
+  "lbl_displayedFiles": "Displayed files:",
+  "status_localOnly": "Local only",
+  "status_remoteOnly": "Remote only",
+  "status_differentContent": "Different content",
+  "status_sameContent": "Same content",
+  "status_all": "All",
+  "yes": "Yes",
+  "no": "No",
+  "ok": "Ok",
+  "certificateInfosTitle": "Certificate infos",
+  "certificateInfosNoCertInstalled": "No certificate installed",
+  "certificateInfosSubjectTitle": "Issued to",
+  "certificateInfosIssuerTitle": "Issued by",
+  "certificateInfosValidityTitle": "Validity period",
+  "certificateInfosValidityStart": "Issued on ",
+  "certificateInfosValidityEnd": "Expires on ",
+  "certificateInfosThumbprintTitle": "Thumbprints",
+  "certificateInfosThumbprintSha1": "SHA-1 Thumbprint",
+  "certificateInfosThumbprintSha256": "SHA-256 Thumbprint",
+  "certificateInfosNotIncluded": "Not included in the certificate",
+  "connectionWalletDisconnect": "Disconnect wallet",
+  "connectionWalletConnect": "Connect your wallet",
+  "connectionWalletDisconnectWarning": "Are you sure you want to disconnect your wallet\nand exit the application?",
+  "confirmationPopupTitle": "Confirmation Request",
+  "uploadFileSelect": "Select your file",
+  "explorerTitle": "Explorer",
+  "websitesListTitle": "My websites",
+  "tooltip_addNewWebsite": "Add new website",
+  "tooltip_refreshWebsite": "Refresh websites",
+  "btn_view": "View",
+  "welcomeTitle": "WELCOME",
+  "welcomeArg1Title": "Easy, Secure and Simple way to Build",
+  "welcomeArg1Desc": "The AEWeb experience enables you to deploy your website with just a few clicks.\n\nThe interface is simple, secure, and user-friendly, making it easy for you to deploy your website effortlessly, even if you have zero coding knowledge.",
+  "welcomeArg2Title": "100% Secure & Tamperproof",
+  "welcomeArg2Desc": "Do I have to worry about security and maintenance once I deploy my website?\nNo!\n\nAEWeb is decentralized and backed by Arch Consensus, which has the capability to handle up to 90% of malicious activity in the network.",
+  "welcomeArg3Title": "Minimum Transaction and Maintenance Cost",
+  "welcomeArg3Desc": "Enjoy 3 to 5 times lower deployment and maintenance fees compared to well-known hosting services like AWS, Google Cloud, and more.\n\nAdditionally, the data will be geographically distributed across the globe, ensuring the highest level of data availability and security.",
+  "welcomeArg4Title": "Built-in Optimized Scalability",
+  "welcomeArg4Desc": "AEWeb, built on the Archethic blockchain, offers both linear and horizontal scalability for your website.\n\nThere is no comparable product that can provide hassle-free deployment and simultaneous scalability like AEWeb does.",
+  "menu_websitesList": "Your websites",
+  "menu_addWebsite": "New website",
+  "menu_documentation": "Documentation",
+  "menu_sourceCode": "Source Code",
+  "menu_faq": "FAQ",
+  "menu_section_hosting": "Hosting",
+  "menu_section_infos": "Informations",
+  "addWebSiteWaitingStep1": "Creating the website in your keychain. Please confirm in your Archethic wallet to confirm the creation.",
+  "addWebSiteConfirmedStep1": "Website created as a new service in your keychain.",
+  "addWebSiteWaitingStep2": "Retrieving files in progress.",
+  "addWebSiteConfirmedStep2": "Files retrieved.",
+  "addWebSiteWaitingStep3": "Creating transactions with the content of the website files.",
+  "addWebSiteConfirmedStep3": "Transactions with the content of the website files created.",
+  "addWebSiteWaitingStep4": "Signing transactions in progress. Please confirm in your Archethic wallet to sign them.",
+  "addWebSiteConfirmedStep4": "Transactions with the content of the website files signed.",
+  "addWebSiteWaitingStep5": "Creating the reference transaction listing the website files in progress.",
+  "addWebSiteConfirmedStep5": "Reference transaction created.",
+  "addWebSiteWaitingStep6": "Signing the reference transaction in progress. Please confirm in your Archethic wallet to sign it.",
+  "addWebSiteConfirmedStep6": "Reference transaction signed.",
+  "addWebSiteWaitingStep7": "Calculating fees to provision the transaction chains containing the website.",
+  "addWebSiteConfirmedStep7": "Fees to provision the transaction chains containing the website calculated.",
+  "addWebSiteWaitingStep8": "Creating the funds transfer transaction to provision the transaction chains containing the website in progress.",
+  "addWebSiteConfirmedStep8": "Funds transfer transaction to provision the transaction chains created.",
+  "addWebSiteWaitingStep9": "Signing the funds transfer transaction in progress. Please confirm in your Archethic wallet to sign it.",
+  "addWebSiteConfirmedStep9": "Funds transfer transaction to provision the transaction chains signed.",
+  "addWebSiteWaitingStep10": "Calculating overall fees in progress.",
+  "addWebSiteConfirmedStep10": "Overall fees calculated: %1 UCO.",
+  "addWebSiteConfirmStep11": "Do you confirm the creation of the website?",
+  "addWebSiteWaitingStep12": "Creating the website on the Archethic blockchain in progress.",
+  "addWebSiteConfirmedStep12": "The website has been successfully deployed!",
+  "addWebSiteDesc": "Ready to experience the future of decentralized ownership?\nDeploy your website on AEWeb and enjoy the benefits of 100% security, tamperproof technology, and optimized scalability.",
+  "updateWebSiteWaitingStep1": "Retrieving information from the blockchain in progress",
+  "updateWebSiteConfirmedStep1": "Information retrieved from the blockchain",
+  "updateWebSiteWaitingStep2": "Analyzing changes to apply in progress",
+  "updateWebSiteConfirmedStep2": "Analysis completed",
+  "updateWebSiteWaitingStep3": "Creating transactions with the website's file content in progress",
+  "updateWebSiteConfirmedStep3": "Transactions with the website's file content created",
+  "updateWebSiteWaitingStep4": "Signing transactions in progress.\nPlease confirm in your Archethic wallet to sign them.",
+  "updateWebSiteConfirmedStep4": "Transactions with the website's file content signed",
+  "updateWebSiteWaitingStep5": "Creating the reference transaction listing the website's files in progress",
+  "updateWebSiteConfirmedStep5": "Reference transaction created",
+  "updateWebSiteWaitingStep6": "Signing the reference transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateWebSiteConfirmedStep6": "Reference transaction signed",
+  "updateWebSiteWaitingStep7": "Calculating fees to provision the transaction chains containing the website in progress",
+  "updateWebSiteConfirmedStep7": "Fees to provision the transaction chains containing the website calculated",
+  "updateWebSiteWaitingStep8": "Creating the funds transfer transaction to provision the transaction chains containing the website in progress",
+  "updateWebSiteConfirmedStep8": "Funds transfer transaction to provision the transaction chains created",
+  "updateWebSiteWaitingStep9": "Signing the funds transfer transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateWebSiteConfirmedStep9": "Funds transfer transaction to provision the transaction chains signed",
+  "updateWebSiteConfirmedStep10": "Overall fees calculated: %1 UCO.",
+  "updateWebSiteWaitingStep10": "Calculating overall fees in progress",
+  "updateWebSiteConfirmStep11": "Do you confirm the website update?",
+  "updateWebSiteWaitingStep12": "Updating the website on the Archethic blockchain in progress",
+  "updateWebSiteConfirmedStep13": "The site has been successfully updated!",
+  "websitesListVersionsPopupExplore": "Explore files",
+  "websitesListVersionsPopupRefTx": "See reference transaction",
+  "websitesListVersionsPopupSync": "Sync from local folder",
+  "websitesListVersionsPopupDelete": "Delete files and SSL certificate / key",
+  "websitesListVersionsPopupDownload": "Download",
+  "websitesListVersionsPopupCertificate": "Certificate management",
+  "websitesListVersionsTitle": "Website's versions",
+  "websitesListVersionsNoVersion": "No version available",
+  "websitesListVersionsTableHeaderDate": "Date",
+  "websitesListVersionsTableHeaderFiles": "Files",
+  "websitesListVersionsTableHeaderSize": "Size",
+  "websitesListVersionsTableHeaderCertificate": "Certificate",
+  "websitesListVersionsTableHeaderActions": "Actions"
 }
