--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,6 +17,7 @@
   "btn_close": "Close",
   "btn_update_website": "Update website",
   "btn_add_website": "Create website",
+  "btn_unpublish_website": "Unpublish website",
   "hint_searchFiles": "Search files...",
   "lbl_displayedFiles": "Displayed files:",
   "status_localOnly": "Local only",
@@ -41,6 +42,7 @@
   "connectionWalletDisconnect": "Disconnect wallet",
   "connectionWalletConnect": "Connect your wallet",
   "connectionWalletDisconnectWarning": "Are you sure you want to disconnect your wallet\nand exit the application?",
+  "unplublishWebsiteWarning": "Are you sure you want to unpublish your website?",
   "confirmationPopupTitle": "Confirmation Request",
   "uploadFileSelect": "Select your file",
   "explorerTitle": "Explorer",
@@ -64,6 +66,7 @@
   "menu_faq": "FAQ",
   "menu_section_hosting": "Hosting",
   "menu_section_infos": "Informations",
+  "addWebSiteDisclaimer": "Before doing so, please note that all the data of your website will remain public in the Archethic blockchain.",
   "addWebSiteWaitingStep1": "Creating the website in your keychain. Please confirm in your Archethic wallet to confirm the creation.",
   "addWebSiteConfirmedStep1": "Website created as a new service in your keychain.",
   "addWebSiteWaitingStep2": "Retrieving files in progress.",
@@ -87,7 +90,10 @@
   "addWebSiteConfirmStep11": "Do you confirm the creation of the website?",
   "addWebSiteWaitingStep12": "Creating the website on the Archethic blockchain in progress.",
   "addWebSiteConfirmedStep12": "The website has been successfully deployed!",
-  "addWebSiteDesc": "Ready to experience the future of decentralized ownership?\nDeploy your website on AEWeb and enjoy the benefits of 100% security, tamperproof technology, and optimized scalability.",
+  "addWebSiteDesc": "You can publish your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions do not require a fee.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
+  "unpublishWebSiteDesc": "You can unpublish your website from this screen.\n\nBefore doing so, be aware that your website data will remain public in the Archethic blockchain.\n\nOnly access to the site is disabled via the blanking of the reference transaction that contains the link to all the files of your website.",
+  "updateWebSiteDesc": "You can update your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions do not require a fee.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
+  "updateWebSiteDisclaimer": "Before doing so, please note that all the data of your website will remain public in the Archethic blockchain.",
   "updateWebSiteWaitingStep1": "Retrieving information from the blockchain in progress",
   "updateWebSiteConfirmedStep1": "Information retrieved from the blockchain",
   "updateWebSiteWaitingStep2": "Analyzing changes to apply in progress",
@@ -114,7 +120,7 @@
   "websitesListVersionsPopupExplore": "Explore files",
   "websitesListVersionsPopupRefTx": "See reference transaction",
   "websitesListVersionsPopupSync": "Sync from local folder",
-  "websitesListVersionsPopupDelete": "Delete files and SSL certificate / key",
+  "websitesListVersionsPopupUnpublish": "Unpublish website",
   "websitesListVersionsPopupDownload": "Download",
   "websitesListVersionsPopupCertificate": "Certificate management",
   "websitesListVersionsTitle": "Website's versions",
@@ -123,5 +129,6 @@
   "websitesListVersionsTableHeaderFiles": "Files",
   "websitesListVersionsTableHeaderSize": "Size",
   "websitesListVersionsTableHeaderCertificate": "Certificate",
-  "websitesListVersionsTableHeaderActions": "Actions"
+  "websitesListVersionsTableHeaderActions": "Actions",
+  "disclaimer": "Disclaimer"
 }
