--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -90,9 +90,9 @@
   "addWebSiteConfirmStep11": "Do you confirm the creation of the website?",
   "addWebSiteWaitingStep12": "Creating the website on the Archethic blockchain in progress.",
   "addWebSiteConfirmedStep12": "The website has been successfully deployed!",
-  "addWebSiteDesc": "You can publish your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions do not require a fee.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
+  "addWebSiteDesc": "You can publish your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions don't require fees.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
   "unpublishWebSiteDesc": "You can unpublish your website from this screen.\n\nBefore doing so, be aware that your website data will remain public in the Archethic blockchain.\n\nOnly access to the site is disabled via the blanking of the reference transaction that contains the link to all the files of your website.",
-  "updateWebSiteDesc": "You can update your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions do not require a fee.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
+  "updateWebSiteDesc": "You can update your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions don't require fees.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
   "updateWebSiteDisclaimer": "Before doing so, please note that all the data of your website will remain public in the Archethic blockchain.",
   "updateWebSiteWaitingStep1": "Retrieving information from the blockchain in progress",
   "updateWebSiteConfirmedStep1": "Information retrieved from the blockchain",
@@ -118,6 +118,7 @@
   "updateWebSiteWaitingStep12": "Updating the website on the Archethic blockchain in progress",
   "updateWebSiteConfirmedStep13": "The site has been successfully updated!",
   "websitesListVersionsPopupExplore": "Explore files",
+  "websitesListVersionsPopupExploreTx": "Explore transactions",
   "websitesListVersionsPopupRefTx": "See reference transaction",
   "websitesListVersionsPopupSync": "Sync from local folder",
   "websitesListVersionsPopupUnpublish": "Unpublish website",
@@ -128,7 +129,8 @@
   "websitesListVersionsTableHeaderDate": "Date",
   "websitesListVersionsTableHeaderFiles": "Files",
   "websitesListVersionsTableHeaderSize": "Size",
-  "websitesListVersionsTableHeaderCertificate": "Certificate",
+  "websitesListVersionsTableHeaderFees": "Fees",
+  "websitesListVersionsTableHeaderCertificate": "Cert.",
   "websitesListVersionsTableHeaderActions": "Actions",
   "disclaimer": "Disclaimer",
   "unpublishWebSiteWaitingStep1": "Information retrieved from the blockchain.",
@@ -147,5 +149,11 @@
   "unpublishWebSiteConfirmedStep7": "Overall fees calculated: %1 UCO.",
   "unpublishWebSiteConfirmStep8": "Do you confirm the unpublish of the website?",
   "unpublishWebSiteWaitingStep9": "Unpublish the website on the Archethic blockchain in progress.",
-  "unpublishWebSiteConfirmedStep10": "The website has been successfully unpublished!"
+  "unpublishWebSiteConfirmedStep10": "The website has been successfully unpublished!",
+  "typeHostingTxFiles": "Files",
+  "typeHostingTxRef": "Ref.",
+  "explorerTxTableHeaderType": "Type",
+  "explorerTxTableHeaderAddress": "Address",
+  "explorerTxTableHeaderLink": "Link",
+  "explorerTxTitle": "Transactions explorer"
 }
