--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,17 +4,17 @@
   "systemDefault": "System Default",
   "addWebsiteNameMissing": "Please fill the name of the website.",
   "addWebsitePathMissing": "Please fill the path containing the files to be uploaded.",
-  "addWebsiteZipFileMissing": "Please fill the zip file containing the files to be uploaded.",
+  "addWebsiteZipFileMissing": "Please choose an archive file containing the files to be uploaded. Accepted formats include: zip, rar, and 7z.",
   "addWebsitePathLabel": "Root folder of the website",
   "addWebsitePublicCertPathLabel": "PEM file of the public certificate for the domain",
   "addWebsitePrivateKeyCertLabel": "PEM file of the private key related to the certificate for the domain",
   "addWebsiteGitignoreLabel": "Apply .gitignore rules?",
-  "addWebsiteZipLabel": "Zip file containing the website files",
-  "choosePathSyncPathMissing": "Please fill the path containing the files to be synchronized with the files stored on the blockchain.",
+  "addWebsiteZipLabel": "Archive file containing the website files (zip, rar, 7z)",
   "version": "Version:",
   "build": "Build:",
   "btn_cancel": "Cancel",
   "btn_close": "Close",
+  "btn_sync": "Sync",
   "btn_update_website": "Update website",
   "btn_add_website": "Create website",
   "btn_unpublish_website": "Unpublish website",
@@ -62,7 +62,7 @@
   "menu_websitesList": "Your websites",
   "menu_addWebsite": "New website",
   "menu_documentation": "Documentation",
-  "menu_sourceCode": "Source Code",
+  "menu_sourceCode": "Source code",
   "menu_faq": "FAQ",
   "menu_section_hosting": "Hosting",
   "menu_section_infos": "Informations",
@@ -155,5 +155,11 @@
   "explorerTxTableHeaderType": "Type",
   "explorerTxTableHeaderAddress": "Address",
   "explorerTxTableHeaderLink": "Link",
-  "explorerTxTitle": "Transactions explorer"
+  "explorerTxTitle": "Transactions explorer",
+  "pathSyncPopupSelectArchiveFile": "Select the archive file containing the update of your website",
+  "pathSyncPopupSelectFolder": "Select the root folder of your website",
+  "pathSyncPopupTitle": "Sync from local folder",
+  "pathSyncPopupGitignoreLabel": "Apply .gitignore rules?",
+  "pathSyncPopupPathMissing": "Please fill the path containing the files to be uploaded.",
+  "pathSyncPopupArchiveFileMissing": "Please choose an archive file containing the files to be uploaded. Accepted formats include: zip, rar, and 7z."
 }
