--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -50,7 +50,6 @@
   "tooltip_addNewWebsite": "Add new website",
   "tooltip_refreshWebsite": "Refresh websites",
   "btn_view": "View",
-  "welcomeTitle": "WELCOME",
   "welcomeArg1Title": "Easy, Secure and Simple way to Build",
   "welcomeArg1Desc": "The AEWeb experience enables you to deploy your website with just a few clicks.\n\nThe interface is simple, secure, and user-friendly, making it easy for you to deploy your website effortlessly, even if you have zero coding knowledge.",
   "welcomeArg2Title": "100% Secure & Tamperproof",
@@ -59,6 +58,7 @@
   "welcomeArg3Desc": "Enjoy 3 to 5 times lower deployment and maintenance fees compared to well-known hosting services like AWS, Google Cloud, and more.\n\nAdditionally, the data will be geographically distributed across the globe, ensuring the highest level of data availability and security.",
   "welcomeArg4Title": "Built-in Optimized Scalability",
   "welcomeArg4Desc": "AEWeb, built on the Archethic blockchain, offers both linear and horizontal scalability for your website.\n\nThere is no comparable product that can provide hassle-free deployment and simultaneous scalability like AEWeb does.",
+  "welcomeNoWallet": "Unlock the full potential of our Web3 application - get the Archethic Wallet now!",
   "menu_websitesList": "Your websites",
   "menu_addWebsite": "New website",
   "menu_documentation": "Documentation",
