fix certificate management in add website process

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,8 +6,8 @@
   "addWebsitePathMissing": "Please fill the path containing the files to be uploaded.",
   "addWebsiteZipFileMissing": "Please choose an archive file containing the files to be uploaded. Accepted formats include: zip, rar, and 7z.",
   "addWebsitePathLabel": "Root folder of the website",
-  "addWebsitePublicCertPathLabel": "PEM file of the public certificate for the domain",
-  "addWebsitePrivateKeyCertLabel": "PEM file of the private key related to the certificate for the domain",
+  "addWebsitePublicCertPathLabel": "Public certificate file for the domain",
+  "addWebsitePrivateKeyCertLabel": "Private key file related to the certificate for the domain",
   "addWebsiteGitignoreLabel": "Apply .gitignore rules?",
   "addWebsiteZipLabel": "Archive file containing the website files (zip, rar, 7z)",
   "version": "Version:",
@@ -168,6 +168,7 @@
   "unpublishWebsiteStepErrorFeesTimeout": "The website hasn't depublished because you didn't validate the fees in time.",
   "unpublishWebsiteStepErrorFeesUnvalidated": "The website hasn't been depublished because the fees haven't been validated.",
   "addWebsiteStepErrorSSLCertInvalid": "SSL Certificate is invalid.",
+  "addWebsiteStepErrorSSLCertKeyEmpty": "You must provide an SSL certificate and the private key.",
   "addWebsiteStepErrorGetListFiles": "Unable to get the list of files.",
   "addWebsiteStepErrorFeesTimeout": "The website hasn't deployed because you didn't validate the fees in time.",
   "addWebsiteStepErrorFeesUnvalidated": "The website hasn't been deployed because the fees haven't been validated.",
