--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -66,6 +66,9 @@
   "menu_faq": "FAQ",
   "menu_section_hosting": "Hosting",
   "menu_section_infos": "Informations",
+  "addWebSiteFormTitle": "Add a new website",
+  "addWebSiteFormRequiredInfo": "Required informations",
+  "addWebSiteFormOptionalInfo": "Optional informations",
   "addWebSiteDisclaimer": "Before doing so, please note that all the data of your website will remain public in the Archethic blockchain.",
   "addWebSiteWaitingStep1": "Creating the website in your keychain. Please confirm in your Archethic wallet to confirm the creation.",
   "addWebSiteConfirmedStep1": "Website created as a new service in your keychain.",
@@ -91,7 +94,9 @@
   "addWebSiteWaitingStep12": "Creating the website on the Archethic blockchain in progress.",
   "addWebSiteConfirmedStep12": "The website has been successfully deployed!",
   "addWebSiteDesc": "You can publish your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions don't require fees.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
+  "unpublishWebSiteFormTitle": "Unpublish your website",
   "unpublishWebSiteDesc": "You can unpublish your website from this screen.\n\nBefore doing so, be aware that your website data will remain public in the Archethic blockchain.\n\nOnly access to the site is disabled via the blanking of the reference transaction that contains the link to all the files of your website.",
+  "updateWebSiteFormTitle": "Update your website",
   "updateWebSiteDesc": "You can update your website from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions don't require fees.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your website on the blockchain.",
   "updateWebSiteDisclaimer": "Before doing so, please note that all the data of your website will remain public in the Archethic blockchain.",
   "updateWebSiteWaitingStep1": "Retrieving information from the blockchain in progress",
