Add renewal of certificate

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -66,6 +66,34 @@
   "menu_faq": "FAQ",
   "menu_section_hosting": "Hosting",
   "menu_section_infos": "Informations",
+  "updateCertificateFormTitle": "Add a new certificate",
+  "updateCertificateFormDesc": "You can update or add an SSL certificate to your static site.\n\nYou can upload the file containing the public certificate for your domain and upload the corresponding private key to secure your site.",
+  "updateCertificateRequiredInfo": "Required informations",
+  "updateCertificateStepErrorSSLCertInvalid": "SSL Certificate is invalid.",
+  "updateCertificateStepErrorSSLCertKeyEmpty": "You must provide an SSL certificate and the private key.",
+  "updateCertificatePublicCertPathLabel": "Public certificate file for the domain",
+  "updateCertificatePrivateKeyCertLabel": "Private key file related to the certificate for the domain",
+  "updateCertificateWaitingStep1": "Retrieving information from the blockchain in progress",
+  "updateCertificateConfirmedStep1": "Information retrieved from the blockchain",
+  "updateCertificateWaitingStep2": "Creating the reference transaction listing the static site's files in progress",
+  "updateCertificateConfirmedStep2": "Reference transaction created",
+  "updateCertificateWaitingStep3": "Signing the reference transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateCertificateConfirmedStep3": "Reference transaction signed",
+  "updateCertificateWaitingStep4": "Calculating fees to provision the transaction chains containing the static site in progress",
+  "updateCertificateConfirmedStep4": "Fees to provision the transaction chains containing the static site calculated",
+  "updateCertificateWaitingStep5": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress",
+  "updateCertificateConfirmedStep5": "Funds transfer transaction to provision the transaction chains created",
+  "updateCertificateWaitingStep6": "Signing the funds transfer transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateCertificateConfirmedStep6": "Funds transfer transaction to provision the transaction chains signed",
+  "updateCertificateConfirmedStep7": "Overall fees calculated: %1 UCO.",
+  "updateCertificateWaitingStep7": "Calculating overall fees in progress",
+  "updateCertificateConfirmStep8": "Do you confirm the certificate update?",
+  "updateCertificateWaitingStep9": "Updating the certificate of your static site on the Archethic blockchain in progress",
+  "updateCertificateConfirmedStep10": "The certificate has been successfully updated!",
+  "updateCertificateStepErrorFeesTimeout": "The certificate hasn't updated because you didn't validate the fees in time.",
+  "updateCertificateStepErrorFeesUnvalidated": "The certificate hasn't been updated because the fees haven't been validated.",
+  "updateCertificateStepErrorGetLastRef": "Unable to get the last transaction reference",
+  "btn_add_certificate": "Create new certificate",
   "addWebSiteFormTitle": "Add a new static site",
   "addWebSiteFormRequiredInfo": "Required informations",
   "addWebSiteFormOptionalInfo": "Optional informations",
@@ -127,6 +155,8 @@
   "websitesListVersionsPopupExploreTx": "Explore transactions",
   "websitesListVersionsPopupRefTx": "See reference transaction",
   "websitesListVersionsPopupSync": "Sync from local folder",
+  "websitesListVersionsPopupUpdateCertif": "Update the certificate",
+  "websitesListVersionsPopupAddCertif": "Add a certificate",
   "websitesListVersionsPopupUnpublish": "Unpublish static site",
   "websitesListVersionsPopupDownload": "Download",
   "websitesListVersionsPopupCertificate": "Certificate management",
